--- a/public/posts/点分治.md
+++ b/public/posts/点分治.md
@@ -1,9 +1,7 @@
-这是一篇示例文章，用于展示博客文章的结构。
-
 # 点分治
 点分治，也叫重心剖分，是一种用于树形数据结构的分治思想的算法，解决树上满足条件的路径统计问题。点分治的核心思想是通过选择树的重心结点，将树划分为若干子树，然后递归地在这些子树上应用相同的策略，从而有效地解决问题。
 ## 实现步骤
-1. 确定当前树的中心，设为根结点，开始点分治算法；
+1. 确定当前树的重心，设为根结点，开始点分治算法；
 2. 枚举下一个结点，通过 dfs 更新子树贡献；
 3. 清空当前使用的统计答案的数据结构，比如数组或树状数组（不建议完全清零，可能复杂度退化），删除当前结点；
 4. 递归处理各个子树，回到步骤 $1$。
