Deploy: 43c0755e057c969171cfabbb45e204dec8120961 wbw121124/wbw121124blog@43c0755e057c969171cfabbb45e204dec8120961

--- a/posts/点分治.md
+++ b/posts/点分治.md
@@ -87,7 +87,7 @@ void work(int x) // 点分治主体
 		{
 			n = sz[nxt]; // 更新当前的树大小
 			ctr = 0; // 重置重心，不要忘记
-			// 1. 确定当前树的中心，设为根结点，开始点分治算法；
+			// 1. 确定当前树的重心，设为根结点，开始点分治算法；
 			get_ctr(nxt, 0);
 			work(ctr);
 		}
@@ -105,7 +105,7 @@ signed main()
 		nbr[x].push_back(y);
 		nbr[y].push_back(x);
 	}
-	// 1. 确定当前树的中心，设为根结点，开始点分治算法；
+	// 1. 确定当前树的重心，设为根结点，开始点分治算法；
 	get_ctr(1, 0);
 	work(ctr);
 	cout << ans;
