Deploy: 61599882dbda20a28005a3775fcd105af4299dd9 wbw121124/wbw121124blog@61599882dbda20a28005a3775fcd105af4299dd9

--- a/posts/点分治.md
+++ b/posts/点分治.md
@@ -1,3 +1,5 @@
+<!--update:2026-01-01-->
+
 # 点分治
 点分治，也叫重心剖分，是一种用于树形数据结构的分治思想的算法，解决树上满足条件的路径统计问题。点分治的核心思想是通过选择树的重心结点，将树划分为若干子树，然后递归地在这些子树上应用相同的策略，从而有效地解决问题。
 ## 实现步骤
